<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:title="@string/menu_item_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_history"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_item_clear_history"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_show_all"
        android:icon="@drawable/ic_show_all"
        android:title="@string/menu_item_show_all"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_show_unread"
        android:icon="@drawable/ic_show_unread"
        android:title="@string/menu_item_show_unread"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_item_about" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_item_settings" />
</menu>