<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hacker News</string>

    <string name="title_activity_details_text">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_user">%s\'s Profile</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_news_widget_configure">Widget Config</string>

    <string name="title_share">Share via</string>
    <string name="message_copy">Copied %s</string>
    <string name="message_copied_to_clipboard">Copied to clipboard</string>
    <string name="message_error_retrieve_data">Failed to retrieve data</string>

    <string name="text_deleted">&lt;&lt;deleted&gt;&gt;</string>
    <string name="text_dead">&lt;&lt;dead&gt;&gt;</string>
    <string name="text_no_data">No Data</string>

    <string name="text_user">User:</string>
    <string name="text_created">Created:</string>
    <string name="text_karma">Karma:</string>
    <string name="text_about">About:</string>
    <string name="text_choose_news_type">Choose news type:</string>
    <string name="text_choose_number_of_news">Choose number of news:</string>

    <string name="action_dismiss">Dismiss</string>

    <string name="menu_item_share">Share</string>
    <string name="menu_item_copy_link">Copy Link</string>
    <string name="menu_item_open_in_browser">Open in browser</string>
    <string name="menu_item_clear_history">Clear history</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_open_page">Open page</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_next">Next</string>
    <string name="menu_item_mark_unread">Mark as unread</string>
    <string name="menu_item_mark_read">Mark as read</string>
    <string name="menu_item_show_unread">Show unread</string>
    <string name="menu_item_show_all">Show All</string>

    <string name="news_type_top">Top</string>
    <string name="news_type_best">Best</string>
    <string name="news_type_new">New</string>
    <string name="news_type_show">Show</string>
    <string name="news_type_ask">Ask</string>
    <string name="news_type_jobs">Jobs</string>
    <string name="news_type_bookmarked">Bookmarked</string>
    <string name="news_type_history">History</string>

    <string name="settings_type_key">settings_type</string>
    <string name="settings_type_title">Default news</string>

    <string name="settings_read_indicator_key">settings_read_indicator</string>
    <string name="settings_read_indicator_title">Enable read indicator</string>
    <string name="settings_read_indicator_enabled">Read indicator is enabled</string>
    <string name="settings_read_indicator_disabled">Read indicator is disabled</string>

    <string name="settings_history_key">settings_history</string>
    <string name="settings_history_title">Enable history</string>
    <string name="settings_history_enabled">History is enabled</string>
    <string name="settings_history_disabled">History is disabled</string>

    <string name="label_details">Details</string>
    <string name="label_comments">Comments</string>
    <string name="label_submissions">Submissions</string>
    <string name="label_poll_options">Poll Options</string>

    <string name="desc_app_logo">App Logo</string>
    <string name="desc_refresh_widget">Refresh widget</string>
    <string name="desc_widget_config">Widget config</string>
    <string name="desc_bookmark">Bookmark</string>
    <string name="desc_selected_item">Selected item</string>

    <string name="about_text"><![CDATA[
        Hacker News Android app.<br/><br/>
        This is the unofficial Android app for reading Hacker News from Y Combinator.<br/><br/>
        Hacker News is a social news website focusing on computer science and entrepreneurship.
        In general, the content is about \"anything that gratifies one\'s intellectual curiosity\".<br/><br/>
        Crash reports are automatically reported back to us.
        Bugs, or feature requests can be reported on this project\'s
        <a href="https://github.com/marcelljee/hacker-news-android-app">Github page</a>.<br/><br/>
        This project is open source and neither affiliated with nor endorsed by Y Combinator. Contributors are welcomed.
    ]]></string>
</resources>
