<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="spinner_news_type" />
</resources>